--- a/index.html
+++ b/index.html
@@ -62,12 +62,24 @@
 							<article class="from-right">
 								<iframe width="100%" height="276" src="https://www.youtube.com/embed/hOufr7xxk8o" frameborder="0" allowfullscreen></iframe>
 							</article>
-					        <article class="from-left">
-                                <iframe width="100%" height="276" src="https://www.youtube.com/embed/-Kp6KJ2aFlk" frameborder="0" allowfullscreen></iframe>
-                            </article>
-                            <article class="from-right">
-                                <iframe width="100%" height="276" src="https://www.youtube.com/embed/KlODBoZIVC0" frameborder="0" allowfullscreen></iframe>
-                            </article>
+					                <article class="from-left">
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/-Kp6KJ2aFlk" frameborder="0" allowfullscreen></iframe>
+                                                        </article>
+                                                        <article class="from-right">
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/KlODBoZIVC0" frameborder="0" allowfullscreen></iframe>
+                                                        </article>
+							<article class="from-left">
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/YpZ24n_c4U0" frameborder="0" allowfullscreen></iframe>
+                                                        </article>
+							<article class="from-right">
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/QZlSGM0MIDU" frameborder="0" allowfullscreen></iframe>
+                                                        </article>
+							<article class="from-left">
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/a2hn704aFmo" frameborder="0" allowfullscreen></iframe>
+                                                        </article>
+							<article class="from-right">
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/vwITnMpx-Gs" frameborder="0" allowfullscreen></iframe>
+                                                        </article>
                     
                     </div>
 
