--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<p>Estamos localizados na <strong>Avenida Ipiranga, 750 2°andar - próximo ao metrô República</strong></p>
                     <p>Dispomos de estrutura para <strong>ensaios, gravações, mixagens e produção de arranjos.</strong></p>
                     <p>Para agendar sua visita, telefone ou mande um whatsapp para <strong>(011) 97172-3852</strong></p>
-                    <p>Horário de funcionamento: <strong>Todos os dias, a partir das 12:00h até as 00:00h.</strong></p>
+                    <p>Horário de funcionamento: <strong>De segunda a sábado, a partir das 12:00h até as 00:00h.</strong></p>
 				</div>
 			</section>
 
@@ -79,6 +79,12 @@
                                                         </article>
 							<article class="from-right">
                                                         <iframe width="100%" height="276" src="https://www.youtube.com/embed/vwITnMpx-Gs" frameborder="0" allowfullscreen></iframe>
+                                                        </article>
+							<article class="from-left">
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/b0T2KtzUzRo" frameborder="0" allowfullscreen></iframe>
+                                                        </article>
+							<article class="from-right">
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/azCT4UJmsRM" frameborder="0" allowfullscreen></iframe>
                                                         </article>
                     
                     </div>
