--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<p>Estamos localizados na <strong>Avenida Ipiranga, 750 2°andar - próximo ao metrô República</strong></p>
                     <p>Dispomos de estrutura para <strong>ensaios, gravações, mixagens e produção de arranjos.</strong></p>
                     <p>Para agendar sua visita, telefone ou mande um whatsapp para <strong>(011) 97172-3852</strong></p>
-                    <p>Horário de funcionamento: <strong>De segunda a sábado, a partir das 12:00h até as 00:00h.</strong></p>
+                    <p>Horário de funcionamento: <strong>De Segunda a Sábado, a partir das 12:00h até as 00:00h.</strong></p>
 				</div>
 			</section>
 
