--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 					</header>
                     <p><strong>Ensaio:</strong></p>
 
-                    <p>R$25,00/hora de Segunda a Sexta (exceto feriado)</p>
-                    <p>R$30,00/hora Sábado, Domingo e feriados.</p>
+                    <p>R$25,00/hora de Segunda a Sexta (exceto feriados)</p>
+                    <p>R$30,00/hora Sábados e feriados.</p>
 
                     <p><strong>Gravação:</strong></p>
 
