--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 		    <p><strong>Equipamentos para ensaio:</strong> Peavey Bandit 112 | Soundmaker Destructor 208 | Staner Stage Dragon BX200 | 
 			     Bateria Mapex VX | Mesa Behringer Xenyx 1622 | Par de Caixas CSR 4000 | Microfones Shure Sm58, Sm57 entre outros |</p> 			
 					
+		    <p><strong>Softwares:</strong> Reaper 4 | Reason 5 | Waves Diamond Bundle v9 | Slate Digital | Melodyne 4 | EZ Drummer 2 |
+			    Focusrite Suite | Amplitube 4 | T Racks | Entre outros |</p> 
 		    	
 				</div>
 			</section>
