--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                                                         <iframe width="100%" height="276" src="https://www.youtube.com/embed/QZlSGM0MIDU" frameborder="0" allowfullscreen></iframe>
                                                         </article>
 							<article class="from-left">
-                                                        <iframe width="100%" height="276" src="https://www.youtube.com/watch?v=XiHizueV9aI" frameborder="0" allowfullscreen></iframe>
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/watch?v=SMf6KAZL1-8" frameborder="0" allowfullscreen></iframe>
                                                         </article>
 							<article class="from-right">
-                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/vwITnMpx-Gs" frameborder="0" allowfullscreen></iframe>
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/watch?v=XiHizueV9aI" frameborder="0" allowfullscreen></iframe>
                                                         </article>
 							<article class="from-left">
                                                         <iframe width="100%" height="276" src="https://www.youtube.com/embed/b0T2KtzUzRo" frameborder="0" allowfullscreen></iframe>
