--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<iframe width="100%" height="276" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/12738970&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 							</article>
 							<article class="from-left">
-								<iframe width="100%" height="276" scrolling="no" frameborder="no" src="https://www.youtube.com/watch?v=V3a66GDaeMs" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="276" scrolling="no" frameborder="no" src="https://www.youtube.com/embed/v=V3a66GDaeMs" frameborder="0" allowfullscreen></iframe>
 							</article>
 							<article class="from-right">
 								<iframe width="100%" height="276" src="https://www.youtube.com/embed/hOufr7xxk8o" frameborder="0" allowfullscreen></iframe>
@@ -75,10 +75,10 @@
                                                         <iframe width="100%" height="276" src="https://www.youtube.com/embed/QZlSGM0MIDU" frameborder="0" allowfullscreen></iframe>
                                                         </article>
 							<article class="from-left">
-                                                        <iframe width="100%" height="276" src="https://www.youtube.com/watch?v=SMf6KAZL1-8" frameborder="0" allowfullscreen></iframe>
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/XiHizueV9aI" frameborder="0" allowfullscreen></iframe>
                                                         </article>
 							<article class="from-right">
-                                                        <iframe width="100%" height="276" src="https://www.youtube.com/watch?v=XiHizueV9aI" frameborder="0" allowfullscreen></iframe>
+                                                        <iframe width="100%" height="276" src="https://www.youtube.com/embed/SMf6KAZL1" frameborder="0" allowfullscreen></iframe>
                                                         </article>
 							<article class="from-left">
                                                         <iframe width="100%" height="276" src="https://www.youtube.com/embed/b0T2KtzUzRo" frameborder="0" allowfullscreen></iframe>
