--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 							</article>
 							<article class="from-right">
 								<iframe width="100%" height="276" src="https://www.youtube.com/embed/vnlpdeDdCBg" frameborder="0" allowfullscreen></iframe>
+							</article>
 							<article class="from-left">
 								<iframe width="100%" height="276" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/157643041&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 							</article>
