--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<iframe width="100%" height="276" src="https://www.youtube.com/embed/hMxwEPEpaNI" frameborder="0" allowfullscreen></iframe>>
+								<iframe width="100%" height="276" src="https://www.youtube.com/embed/hMxwEPEpaNI" frameborder="0" allowfullscreen></iframe>
 							</article>
 							<article class="from-right">
 								<iframe width="100%" height="276" src="https://www.youtube.com/embed/vnlpdeDdCBg" frameborder="0" allowfullscreen></iframe>
