--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<iframe width="100%" height="276" src="https://www.youtube.com/embed/6q4dX-p9GUU" frameborder="0" allowfullscreen></iframe>>
 							</article>
 							<article class="from-right">
-								<iframe width="100%" height="276" src="https://youtu.be/UNtBHGx1lwM" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="276" src="https://www.youtube.com/embed/UNtBHGx1lwM" frameborder="0" allowfullscreen></iframe>
 							</article>
 							</article>
 							<article class="from-left">
