--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 
 					<!-- Gallery  -->
 						<div class="gallery">
-							<article class="from-center">
-								<iframe width="100%" height="276" src="https://www.youtube.com/embed/FyhADEIxllo" frameborder="0" allowfullscreen></iframe>
+							<article class="from-middle">
+								<iframe width="100%" height="552" src="https://www.youtube.com/embed/FyhADEIxllo" frameborder="0" allowfullscreen></iframe>
 							</article>
 							
 														
